Fixed padding on mobile

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -321,7 +321,7 @@ div.membership {
   box-shadow: rgba(11, 43, 158, 0.15) 0px 6px 20px -6px;
   border-radius: 24px;
   border: 1px solid rgba(11, 43, 158, 0.15);
-  padding: 10px;
+  padding: 16px;
   margin: 15px 0;
   width: 70%;
 }
